--- a/index.html
+++ b/index.html
@@ -3,11 +3,8 @@
 <head>
 <meta charset="utf-8"/>
   <title>Super Piedra, papel, tijeras, lagarto o Spock</title>
-  <link rel="shortcut icon" href="img/ganas.png" />
-  <link rel="stylesheet" type="text/css" href="css/style.css">
-  <link href='http://fonts.googleapis.com/css?family=Titillium+Web' rel='stylesheet' type='text/css'>
   <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
-  <script src="js/ppt.js" language="javascript" type="text/javascript"></script>
+  <script src="js/juego.js" language="javascript" type="text/javascript"></script>
 </head>
 <body>
   <div id="fb-root"></div>
@@ -29,7 +26,7 @@
       <div id="imgopciones" >  
         <img class="piedra" src="img/piedra.png"/>
         <img class="papel" src="img/papel.png"/>
-        <img class="tijera" src="img/tijera.png"/>
+        <img class="tijeras" src="img/tijeras.png"/>
         <img class="lagarto" src="img/lagarto.png"/>
         <img class="spock" src="img/spock.png"/>
         <br/>
